# rusty-math

./: .conform.yaml  .gitignore  Cargo.toml  README.md  Taskfile.yml  cliff.toml  pyproject.toml
.github/workflows/: CI.yml  build.yml  release.yml
python/rusty_math/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_rusty_math.py
