[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-math"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "maturin>=1.13,<2.0",
    "pyright>=1.1",
    "pytest>=8.3.5",
]

[tool.maturin]
python-source = "python"
